added some content to index page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,6 +28,13 @@
         "styles/partials/_main.scss",
         "styles/partials/_footer.scss"
       ]
+    },
+    {
+      "path": "styles/partials/_hamburgers.scss",
+      "imports": [
+        "styles/partials/_base.scss",
+        "styles/partials/types/_spin.scss"
+      ]
     }
   ],
   "projectView": {
