--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,22 @@
   "name": "vincentDangProjectThree",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "js/script.js",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "assets/diceCursor.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":4735,\"newSize\":2968}}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "styles",
+      "styles/partials",
+      "js"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
